--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -9,7 +9,13 @@
 <body>
     <h1>Storyteller Bot Demo</h1>
     <div id="app">
-        <!-- Interface elements will go here -->
+   <div class="container">
+    <h1>Storyteller Bot Demo</h1>
+    <p>Enter a prompt to generate a story:</p>
+    <input type="text" id="userInput" placeholder="Enter a prompt...">
+    <button id="submitBtn">Generate Story</button>
+    <div id="output"></div>
+</div>     <!-- Interface elements will go here -->
     </div>
     <script src="script.js"></script>
 </body>
